# weekly-report-prompt

./: .gitignore  README.md  pyproject.toml  setup_conf.py
config/: config.yaml.example  template.md.example
weekly-report-prompt/: config_loader.py  git_data_collector.py  main.py  prompt_generator.py  report_file_manager.py  schemas.py
weekly_report_prompt/: config_loader.py  const.py  git_data_collector.py  main.py  prompt_generator.py  report_file_manager.py  schemas.py
