[project]
name = "weekly-report-prompt"
version = "0.1.0"
description = "Generate prompts for LLM to create weekly development reports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "tiktoken>=0.9.0",
]
